--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trinity",
   "version": "1.0.0",
-  "description": "",
+  "description": "- Регистрация/Авторизация: \t- Возможность регистрации через сервисы (Google, Github (**мб ну нафиг**))",
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "mongodb": "^3.2.6",
@@ -21,5 +22,14 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nyacore/kinopoisk-clone.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/nyacore/kinopoisk-clone/issues"
+  },
+  "homepage": "https://github.com/nyacore/kinopoisk-clone#readme"
 }
